# synchronising-automaton

./: CHANGELOG.md  LICENSE  README.md  synchronising-automaton.cabal
app/: DFA.hs  ExampleAutomata.hs  FileReader.hs  Main.hs  Printer.hs  StringReader.hs  Util.hs
app/Algorithms/: PowerConstruction.hs  SynchronisingWord.hs
app/DataStructures/: DFA.hs  Queue.hs
app/Examples/: ExampleAutomata.hs
app/IO/: FileReader.hs  Printer.hs  StringReader.hs
app/Util/: Util.hs
data/: DFA_simple_nonsynchronisable.in  DFA_synchronisable.in  DFA_synchronisable2.in  DFA_synchronisable3.in  DFA_synchronisable4.in
tests/Algorithms/: AlgorithmsTestSuite.hs  PowerConstructionTest.hs  SynchronisingWordTest.hs
tests/DataStructures/: DFATest.hs  DataStructuresTestSuite.hs  QueueTest.hs
tests/IO/: IOTestSuite.hs  StringReaderTest.hs
tests/Util/: UtilTest.hs  UtilTestSuite.hs
