cabal-version:      2.4
name:               synchronising-automaton
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Zofia Glapa
maintainer:         zofia.glapa@student.uj.edu.pl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable synchronising-automaton
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules: 
        Algorithms.PowerConstruction
        Algorithms.SynchronisingWord
        DataStructures.DFA
        DataStructures.Queue
        IO.FileReader
        IO.Printer
        IO.StringReader
        Util.Util
