cabal-version:      2.4
name:               synchronising-automaton
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Zofia Glapa
maintainer:         zofia.glapa@student.uj.edu.pl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable synchronising-automaton
    main-is:          Main.hs

    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules: 
        Algorithms.PowerConstruction
        Algorithms.SynchronisingWord
        DataStructures.DFA
        DataStructures.Queue
        IO.FileReader
        IO.Printer
        IO.StringReader
        Util.Util

Test-Suite test-data-structures
    main-is:            DataStructuresTestSuite.hs

    other-modules:      DataStructures.Queue
                        DataStructures.DFA
                        QueueTest
                        DFATest
                        Util.Util   

    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests/DataStructures
                        app
    default-language:   Haskell2010
    build-depends:      base ^>=4.15.1.0, HUnit

Test-Suite test-IO
    main-is:            IOTestSuite.hs

    other-modules:      IO.StringReader
                        IO.FileReader
                        IO.Printer
                        DataStructures.DFA
                        StringReaderTest
                        Util.Util   

    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests/IO
                        app
    default-language:   Haskell2010
    build-depends:      base ^>=4.15.1.0, HUnit

Test-Suite test-util
    main-is:            UtilTestSuite.hs

    other-modules:      UtilTest
                        Util.Util   

    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests/Util
                        app
    default-language:   Haskell2010
    build-depends:      base ^>=4.15.1.0, HUnit

Test-Suite test-algorithms
    main-is:            AlgorithmsTestSuite.hs

    other-modules:      PowerConstructionTest
                        SynchronisingWordTest
                        Algorithms.PowerConstruction
                        Algorithms.SynchronisingWord
                        DataStructures.DFA
                        Util.Util 
                        DataStructures.Queue

    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests/Algorithms
                        app
    default-language:   Haskell2010
    build-depends:      base ^>=4.15.1.0, HUnit